<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/canvas_margin"
        tools:context=".view.DirectionsFragment">

        <TextView
            android:id="@+id/met_address_title"
            style="@style/directions_tile_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:padding="@dimen/canvas_inter_padding"
            android:text="@string/the_met_address_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/met_address"
            style="@style/directions_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:padding="@dimen/canvas_inter_padding"
            android:text="@string/the_met_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/met_address_title" />

        <TextView
            android:id="@+id/met_address_distance_title"
            style="@style/directions_tile_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/canvas_margin"
            android:background="@color/primaryDarkColor"
            android:padding="@dimen/canvas_inter_padding"
            android:text="@string/my_distance_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/met_address" />

        <TextView
            android:id="@+id/met_address_distance"
            style="@style/directions_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:padding="@dimen/canvas_inter_padding"
            android:text="@string/my_distance_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/met_address_distance_title" />

        <ImageView
            android:id="@+id/met_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/map_of_the_met_content_description"
            android:padding="@dimen/canvas_inter_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/met_map"
            app:layout_constraintBottom_toTopOf="@id/get_directions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/met_address_distance" />


        <Button
            android:id="@+id/get_directions_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondaryLightColor"
            android:text="@string/direction_menu_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>